[package]
name = "sans"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]

# REST dependencies
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"

# Serialisations
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# Bindings
# magick_rust = "*"
rscam = "0.5.3"

# Other utils
cute = "*"
ternop = "*"