[package]
name = "sans"
description = "A comprehensive software for running camera enabled workflows, including Libreflip"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]

# REST dependencies
rocket = "^0.3"
rocket_codegen = "^0.3"
rocket_contrib = "^0.3"

# Serialisations
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

# Bindings
# magick_rust = "*"
rscam = "^0.5"

# Other utils
cute = "*"
ternop = "*"
clap = "^2.30"