[workspace]
members = [

    # Core sans library components
    "sans-core",
    # "sans-core/sans-processing",
    "sans-core/sans-types",

    # Core server run on machine
    "sans-server",

    # Task worker for processing pipeline
    "sans-worker",

    # Optional debugging and development CLI (sansctl)
    "sans-ctrl"
]