[package]
name = "sans-core"
description = "A comprehensive software for running camera enabled workflows, including Libreflip"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
sans-types = { path = "sans-types" }

# Serialisation/ Deserialisation
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

# Hardware bindings
rscam = "0.5"
mio-serial = "0.8"