[package]
name = "sans-core"
description = "A comprehensive software for running camera enabled workflows, including Libreflip"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
version = "0.1.0"

[dependencies]
sans-types = { path = "sans-types" }

# Serialisation/ Deserialisation
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

# Hardware bindings
rscam = "0.5"
serialport = "2.0"