[package]
name = "sans-server"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
sans-core = { path = "../sans-core" }
sans-types = { path = "../sans-core/sans-types/" }
clap = "2.33"

actix-files = "0.2"
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
handlebars = "2.0"